--- a/chart.html
+++ b/chart.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/ >
-		<title>Smoothed D3.js Radar Chart</title>
+		<title>vinograph</title>
 
 		<!-- Google fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
@@ -54,35 +54,78 @@
 			////////////////////////// Data //////////////////////////////
 			//////////////////////////////////////////////////////////////
 
-			var data = [
-					  [
-							{axis:"Brightness",value:0.22},
-							{axis:"Geometry",value:0.28},
-							{axis:"Temperature",value:0.29},
-							{axis:"Saturation",value:0.17},
-							{axis:"Density",value:0.22},
-							{axis:"Transparency",value:0.02},
-							{axis:"Roughness",value:0.21},
-					  ]
+			function drawChart(image_ids) {
+
+				let brightness = 0;
+				let geometry = 0;
+				let temperature = 0;
+				let saturation = 0;
+				let density = 0;
+				let transparency = 0;
+				let roughness = 0;
+
+				// Replace ./data.json with your JSON feed
+				fetch('./data/images.json').then(response => {
+				  return response.json();
+				}).then(allImages => {
+				  // Work with JSON data here
+					let base = 0;
+					for (let image_id of image_ids) {
+						for (let image of allImages.images) {
+							if (image_id === image.image_id) {
+								base += 10;
+								brightness += image.tags.brightness;
+								geometry += image.tags.geometry;
+								temperature += image.tags.temperature;
+								saturation += image.tags.saturation;
+								density += image.tags.density;
+								transparency += image.tags.transparency;
+								roughness += image.tags.roughness;
+							}
+						}
+					}
+					const data =
+					[
+						[
+							{axis:"Brightness",value:brightness / base},
+							{axis:"Geometry",value:geometry / base},
+							{axis:"Temperature",value:temperature / base},
+							{axis:"Saturation",value:saturation / base},
+							{axis:"Density",value:density / base},
+							{axis:"Transparency",value:transparency / base},
+							{axis:"Roughness",value:roughness / base},
+						]
 					];
-			//////////////////////////////////////////////////////////////
-			//////////////////// Draw the Chart //////////////////////////
-			//////////////////////////////////////////////////////////////
 
-			var color = d3.scale.ordinal()
-				.range(["#EDC951","#CC333F","#00A0B0"]);
+					//////////////////////////////////////////////////////////////
+					//////////////////// Draw the Chart //////////////////////////
+					//////////////////////////////////////////////////////////////
 
-			var radarChartOptions = {
-			  w: width,
-			  h: height,
-			  margin: margin,
-			  maxValue: 0.5,
-			  levels: 5,
-			  roundStrokes: true,
-			  color: color
-			};
-			//Call function to draw the Radar chart
-			RadarChart(".radarChart", data, radarChartOptions);
+					var color = d3.scale.ordinal()
+						.range(["#EDC951","#CC333F","#00A0B0"]);
+
+					var radarChartOptions = {
+						w: width,
+						h: height,
+						margin: margin,
+						maxValue: 0.5,
+						levels: 5,
+						roundStrokes: true,
+						color: color
+					};
+
+					//Call function to draw the Radar chart
+					RadarChart(".radarChart", data, radarChartOptions);
+					// return (data);
+				}).catch(err => {
+				  // Do something for an error here
+					console.log('error');
+				});
+			}
+
+			let imgs = [1, 2, 3];
+			drawChart(imgs);
+
 		</script>
 	</body>
 </html>
