--- a/app/index.html
+++ b/app/index.html
@@ -42,18 +42,19 @@ http://www.tooplate.com/view/2082-pure-mix
 	<!-- <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,300' rel='stylesheet' type='text/css'> -->
 	<!-- Add Firebase -->
 	<!-- Firebase App is always required and must be first -->
-	<script src="/__/firebase/5.5.8/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-app.js"></script>
 
 	<!-- Add additional services that you want to use -->
-	<script src="/__/firebase/5.5.8/firebase-auth.js"></script>
-	<script src="/__/firebase/5.5.8/firebase-database.js"></script>
-	<script src="/__/firebase/5.5.8/firebase-messaging.js"></script>
-	<script src="/__/firebase/5.5.8/firebase-functions.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-messaging.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-functions.js"></script>
 
 	<!-- Comment out (or don't include) services that you don't want to use -->
 	<!-- <script src="/__/firebase/5.5.8/firebase-storage.js"></script> -->
 
-	<script src="/__/firebase/init.js"></script>
+	<!-- <script src="/__/firebase/init.js"></script> -->
 	<script>
 		// Initialize Firebase
 		var config = {
@@ -109,13 +110,13 @@ http://www.tooplate.com/view/2082-pure-mix
 
 	<!-- Javascript
 ================================================== -->
-	<script src="../js/jquery.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
-	<script src="../js/isotope.js"></script>
-	<script src="../js/imagesloaded.min.js"></script>
-	<script src="../js/wow.min.js"></script>
-	<script src="../js/custom.js"></script>
-	<script src="../js/main.js"></script>
+	<script src="js/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/isotope.js"></script>
+	<script src="js/imagesloaded.min.js"></script>
+	<script src="js/wow.min.js"></script>
+	<script src="js/custom.js"></script>
+	<script src="js/main.js"></script>
 
 </body>
 
