--- a/app/chart.html
+++ b/app/chart.html
@@ -31,7 +31,8 @@ body {
 </style>
 
 <script src="http://d3js.org/d3.v3.js"></script>
-<script src="https://rawgit.com/tpreusse/radar-chart-d3/master/src/radar-chart.js"></script>
+<!-- <script src="https://rawgit.com/tpreusse/radar-chart-d3/master/src/radar-chart.js"></script> -->
+<script src="js/radar-chart.js"></script>
 <script id="myJSON" type="text/javascript" src="data/images.js"></script>
 
 <script>
@@ -126,9 +127,22 @@ if (json) {
   var chart = RadarChart.chart();
   var cfg = chart.config(); // retrieve default config
   var svg = d3.select('body').append('svg')
-    .attr('width', cfg.w + cfg.w + 50)
-    .attr('height', cfg.h + cfg.h / 4);
-    svg.append('g').classed('single', 1).datum(data).call(chart);
+    // .attr('width', cfg.w + cfg.w + 50)
+    // .attr('height', cfg.h + cfg.h / 4)
+    .attr("width", cfg.w + cfg.margin.left + cfg.margin.right)
+    .attr("height", cfg.h + cfg.margin.top + cfg.margin.bottom)
+    .attr( // move the svg to the center of the canvas
+      "transform",
+      "translate(" +
+        (cfg.w / 2 + cfg.margin.left) +
+        "," +
+        (cfg.h / 2 + cfg.margin.top) +
+        ")"
+      );
+    // .attr("width", cfg.w + cfg.margin.left + cfg.margin.right)
+    // .attr("height", cfg.h + cfg.margin.top + cfg.margin.bottom)
+    svg.append('g')
+      .classed('single', 1).datum(data).call(chart);
 }
 
 
