--- a/app/chart.html
+++ b/app/chart.html
@@ -1,159 +1,168 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+  <title>Radar chart</title>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+	<script src="js/RadarChart.js"></script>
+  <script id="myJSON" type="text/javascript" src="data/images.js"></script>
 
-<meta charset="utf-8">
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
-<link rel="stylesheet" href="https://rawgit.com/tpreusse/radar-chart-d3/master/src/radar-chart.css">
+	<style>
+		body {
+		  overflow: hidden;
+		  margin: 0;
+		  font-size: 14px;
+		  font-family: "Helvetica Neue", Helvetica;
+		}
 
-<style>
-body {
-  padding: 20px;
-}
-</style>
+		#chart {
+		  position: absolute;
+		  top: 50px;
+		  left: 100px;
+		}
+	</style>
+  </head>
+  <body>
+    <div id="body">
+	  <div id="chart"></div>
+    </div>
 
-<style>
-body {
-  background-color: #1e1e21;
-}
-.radar-chart .area {
-  fill-opacity: 0.8;
-}
-.radar-chart.focus .area {
-  fill-opacity: 0.3;
-}
-.radar-chart.focus .area.focused {
-  fill-opacity: 0.9;
-}
-.area.images, .images .circle {
-  fill: #68545d;
-  stroke: none;
-}
+    <script>
 
-</style>
-
-<script src="http://d3js.org/d3.v3.js"></script>
-<!-- <script src="https://rawgit.com/tpreusse/radar-chart-d3/master/src/radar-chart.js"></script> -->
-<script src="js/radar-chart.js"></script>
-<script id="myJSON" type="text/javascript" src="data/images.js"></script>
-
-<script>
-RadarChart.defaultConfig.color = function() {};
-RadarChart.defaultConfig.radius = 3;
-RadarChart.defaultConfig.w = 400;
-RadarChart.defaultConfig.h = 400;
-</script>
-
-<span></span>
-
-<script>
-
-/* Retrieve selection from localStorage */
-let image_ids = [];
-if (typeof(Storage) !== "undefined" && localStorage.selection) {
-  // let imgs = localStorage.selection;
-  selection = JSON.parse(window.localStorage.getItem("selection")); // Retrieving
-  for (let s of selection) {
-    let filename = s.split('/')[1];
-    let img_id = parseInt(filename.split('.')[0]);
-    image_ids.push(img_id);
-  }
-} else {
-  console.log('error at storage on chart');
-}
-
-console.log(image_ids);
-
-if (image_ids.length === 0) {
-  console.log('imgs is empty');
-}
-
-let brightness = 0;
-let density = 0;
-let rugosity = 0;
-let roundness = 0;
-let saturation = 0;
-
-// locally load from images.js
-if (json) {
-  allImages = json.images;
-  let base = 0;
-  for (let image_id of image_ids) {
-    for (let image of allImages) {
-      if (image_id === image.image_id) {
-        base += 1;
-        brightness += image.tags.Brightness;
-        density += image.tags.Density;
-        rugosity += image.tags.Rugosity;
-        roundness += image.tags.Roundness;
-        saturation += image.tags.Saturation;
+    /* Retrieve selection from localStorage */
+    let image_ids = [];
+    if (typeof(Storage) !== "undefined" && localStorage.selection) {
+      // let imgs = localStorage.selection;
+      selection = JSON.parse(window.localStorage.getItem("selection")); // Retrieving
+      for (let s of selection) {
+        let filename = s.split('/')[1];
+        let img_id = parseInt(filename.split('.')[0]);
+        image_ids.push(img_id);
       }
+    } else {
+      console.log('error at storage on chart');
     }
-  }
 
-  if (base === 0) {
-    base = 1;
-  }
+    console.log(image_ids);
 
-  const data = [
-    {
-      className: 'images',
-      axes: [
-        {
-          axis: "Brightness",
-          value: brightness / base
-        },
-        {
-          axis: "Density",
-          value: density / base
-        },
-        {
-          axis: "Rugosity",
-          value: rugosity / base
-        },
-        {
-          axis: "Roundness",
-          value: roundness / base
-        },
-        {
-          axis: "Saturation",
-          value: saturation / base
+    if (image_ids.length === 0) {
+      console.log('imgs is empty');
+    }
+
+    let brightness = 0;
+    let density = 0;
+    let rugosity = 0;
+    let roundness = 0;
+    let saturation = 0;
+
+    // locally load from images.js
+    if (json) {
+      allImages = json.images;
+      let base = 0;
+      for (let image_id of image_ids) {
+        for (let image of allImages) {
+          if (image_id === image.image_id) {
+            base += 1;
+            brightness += image.tags.Brightness;
+            density += image.tags.Density;
+            rugosity += image.tags.Rugosity;
+            roundness += image.tags.Roundness;
+            saturation += image.tags.Saturation;
+          }
         }
-      ]
+      }
+
+      if (base === 0) {
+        base = 1;
+      }
+
+      const data = [
+          [
+            {
+              axis: "Brightness",
+              value: brightness / base
+            },
+            {
+              axis: "Density",
+              value: density / base
+            },
+            {
+              axis: "Rugosity",
+              value: rugosity / base
+            },
+            {
+              axis: "Roundness",
+              value: roundness / base
+            },
+            {
+              axis: "Saturation",
+              value: saturation / base
+            }
+          ]
+      ];
+      console.log(data);
+      /////////////////////////////////////////////////////////////
+      //////////////////////// Set-Up //////////////////////////////
+      //////////////////////////////////////////////////////////////
+
+      var w = 500, h = 500;
+
+      var colorscale = d3.scale.category10();
+
+      //Legend titles
+      // var LegendOptions = ["Smartphone", "Tablet"];
+
+
+
+      //Options for the Radar chart, other than default
+      var mycfg = {
+        w: w,
+        h: h,
+        maxValue: 10,
+        levels: 5,
+        ExtraWidthX: 300
+      };
+
+      //Call function to draw the Radar chart
+      //Will expect that data is in %'s
+      RadarChart.draw("#chart", data, mycfg);
+
+      ////////////////////////////////////////////
+      /////////// Initiate legend ////////////////
+      ////////////////////////////////////////////
+
+      var svg = d3
+        .select("#body")
+        .selectAll("svg")
+        .append("svg")
+        .attr("width", w + 300)
+        .attr("height", h);
+
+      //Create the title for the legend
+      var text = svg
+        .append("text")
+        .attr("class", "title")
+        .attr("transform", "translate(90,0)")
+        .attr("x", w - 70)
+        .attr("y", 10)
+        .attr("font-size", "12px")
+        .attr("fill", "#404040")
+        .text("What % of owners use a specific service in a week");
+
+      //Initiate Legend
+      var legend = svg
+        .append("g")
+        .attr("class", "legend")
+        .attr("height", 100)
+        .attr("width", 200)
+        .attr("transform", "translate(90,20)");
+
     }
-  ];
 
 
 
-  console.log(data);
-  var chart = RadarChart.chart();
-  var cfg = chart.config(); // retrieve default config
-  var svg = d3.select('body').append('svg')
-    // .attr('width', cfg.w + cfg.w + 50)
-    // .attr('height', cfg.h + cfg.h / 4)
-    .attr("width", cfg.w + cfg.margin.left + cfg.margin.right)
-    .attr("height", cfg.h + cfg.margin.top + cfg.margin.bottom)
-    .attr( // move the svg to the center of the canvas
-      "transform",
-      "translate(" +
-        (cfg.w / 2 + cfg.margin.left) +
-        "," +
-        (cfg.h / 2 + cfg.margin.top) +
-        ")"
-      );
-    // .attr("width", cfg.w + cfg.margin.left + cfg.margin.right)
-    // .attr("height", cfg.h + cfg.margin.top + cfg.margin.bottom)
-    svg.append('g')
-      .classed('single', 1).datum(data).call(chart);
-}
 
+    </script>
 
-</script>
-
-
-
-<!--
-<h2>Simple single chart drawing</h2>
-<div class="chart-container"></div>
-<script>
-RadarChart.draw(".chart-container", data);
-</script>
--->
+  </body>
+</html>
