--- a/app/chart.html
+++ b/app/chart.html
@@ -76,22 +76,17 @@
     <script>
 
     /* Retrieve selection from localStorage */
-    let image_ids = [];
+    let selection = [];
     if (typeof(Storage) !== "undefined" && localStorage.selection) {
       selection = JSON.parse(window.localStorage.getItem("selection")); // Retrieving
-      for (let s of selection) {
-        let filename = s.split('/')[1];
-        let img_id = parseInt(filename.split('.')[0]);
-        image_ids.push(img_id);
-      }
     } else {
       console.log('error at storage on chart');
     }
 
-    console.log(image_ids);
+    // console.log(selection);
 
-    if (image_ids.length === 0) {
-      console.log('imgs is empty');
+    if (selection.length === 0) {
+      console.log('selection is empty');
     }
 
     let brightness = 0;
@@ -104,7 +99,7 @@
     if (json) {
       allImages = json.images;
       let base = 0;
-      for (let image_id of image_ids) {
+      for (let image_id of selection) {
         for (let image of allImages) {
           if (image_id === image.image_id) {
             base += 1;
@@ -172,6 +167,14 @@
       //Will expect that data is in %'s
       RadarChart.draw("#chart", data, mycfg);
 
+      // if(typeof(Storage)!=="undefined")
+      // {
+      //   window.localStorage.setItem("selection", JSON.stringify(selection));
+      // }
+      // else
+      // {
+      //   console.log('error at sotrage at index');
+      // }
 
     }
 
