--- a/app/chart.html
+++ b/app/chart.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
   <title>vinograph</title>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
 	<script src="js/RadarChart.js"></script>
   <script id="myJSON" type="text/javascript" src="data/images.js"></script>
 
@@ -164,17 +164,8 @@
       };
 
       //Call function to draw the Radar chart
-      //Will expect that data is in %'s
       RadarChart.draw("#chart", data, mycfg);
 
-      // if(typeof(Storage)!=="undefined")
-      // {
-      //   window.localStorage.setItem("selection", JSON.stringify(selection));
-      // }
-      // else
-      // {
-      //   console.log('error at sotrage at index');
-      // }
 
     }
 
