--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -34,10 +34,10 @@
       #recommendation-container {
         color: white;
         display: flex;
-        padding: 5em;
+        padding: 1.5em;
         align-items: center;
         justify-content: center;
-        margin: 3em;
+        margin: 1.2em;
         flex-wrap: wrap;
       }
 
@@ -77,8 +77,7 @@
           for (let image of wine.images) {
             for (let s of selection) {
               if (image === s) {
-                // console.log("count");
-                count += 1;
+                count++;
               }
             }
           }
@@ -96,7 +95,6 @@
         recommendation.forEach(wine => {
           container.appendChild(createRecommendationHTML(wine));
         });
-        // container.appendChild(div);
       }
 
       createRecommendationHTML = (wine) => {
@@ -121,21 +119,8 @@
         return div;
       }
 
-
       fillRecommendationHTML(recommendation);
 
-      // getRecommendation = function(arr) {
-      //
-      //   let start = "<div class="wine">";
-      //   let a_end = "</div>";
-      //   $.each(arr, function(idx, val) {
-      //
-      //
-      //     $("#carousel").append(
-      //       a_start + input + photo + a_end
-      //     );
-      //   });
-      // };
 
     </script>
 
