--- a/app/chart.html
+++ b/app/chart.html
@@ -29,7 +29,7 @@
   	body {
 		  overflow: hidden;
 		  margin: 0;
-		  font-size: 14px;
+		  font-size: 0.9em;
 		  font-family: "georgia";
       background-color: #1e1e21;
 		}
@@ -43,20 +43,31 @@
     .button {
       font-family: "georgia";
       background: transparent;
-      border: 0.02px solid white;
+      border: 1px solid white;
       color: white;
-      padding: 5px 20px;
+      padding: 8px;
       text-align: center;
       text-decoration: none;
       display: inline-block;
-      font-size: 16px;
-      margin:auto;
+      font-size: 1em;
+      flex: 1 1 0;
+    }
+
+    .button#left {
+      margin-left: 15em;
+      margin-right: 3em;
+    }
+
+    .button#right {
+      margin-left: 3em;
+      margin-right: 15em;
     }
 
     #buttons {
       display: flex;
       align-items: center;
-      justify-content: center
+      justify-content: center;
+      flex-wrap: nowrap;
     }
 
 	</style>
@@ -70,8 +81,8 @@
 	  <div id="chart"></div>
     </div>
     <div id="buttons">
-      <button class="button" onclick="location.href='index.html'" type="button">Review my picture selection</button>
-      <button class="button" onclick="location.href='recommendation.html'" type="button">Checkout my wine recommendation</button>
+      <button class="button" id="left" onclick="location.href='index.html'" type="button">Review my picture selection</button>
+      <button class="button" id="right" onclick="location.href='recommendation.html'" type="button">Check out my wine recommendation</button>
     </div>
     <script>
 
