change margin and padding of recommendation and recommendation-container to make sure all text shows

--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -9,6 +9,7 @@
       header {
         display: flex;
         padding: 2.4em;
+        padding-bottom: 1em;
         font-family: "georgia";
         font-size: 1.5em;
         color: white
@@ -34,16 +35,19 @@
       #recommendation-container {
         color: white;
         display: flex;
-        padding: 1.5em;
+        padding: 1em;
+        padding-top: 0;
         align-items: center;
         justify-content: center;
         margin: 1.2em;
+        margin-top: 0;
         flex-wrap: wrap;
       }
 
       #recommendation {
         font-size: 1.3em;
-        padding: 2em;
+        padding: 1.5em;
+        padding-top: 0;
         flex: 1 1 0
       }
     </style>
