fix not scrolling

--- a/app/chart.html
+++ b/app/chart.html
@@ -27,7 +27,7 @@
     }
 
   	body {
-		  overflow: hidden;
+		  /* overflow: hidden; */ /* when used scroll doesn't work */
 		  margin: 0;
 		  font-size: 0.9em;
 		  font-family: "georgia";
