--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -25,7 +25,7 @@
       }
 
     	body {
-  		  overflow: hidden;
+  		  /* overflow: hidden; */
   		  margin: 0;
   		  font-size: 14px;
   		  font-family: "georgia";
@@ -40,14 +40,14 @@
         align-items: center;
         justify-content: center;
         margin: 1.2em;
-        margin-top: 0;
+        /* margin-top: 0; */
         flex-wrap: wrap;
       }
 
       #recommendation {
         font-size: 1.3em;
         padding: 1.5em;
-        padding-top: 0;
+        /* padding-top: 0; */
         flex: 1 1 0
       }
     </style>
