--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -57,6 +57,12 @@
     <header>
       <div>__________ <br><br> Our wine recommendation for you</div>
       <div><img src="images/logo.png" id="logo"></div>
+      <script type="text/javascript">
+        document.getElementById("logo").onclick = function() {
+          location.href = "index.html";
+        };
+      </script>
+
     </header>
 
     <section id="recommendation-container">
