--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -8,9 +8,10 @@
     <title>Sign up for Roots!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
+    <link rel="icon" href="./assets/favicon.ico">
     <style>
         .page-background {
-            background: url(./assets/cutekittens.jpg) no-repeat center center;
+            background: url(./assets/background.jpg) no-repeat center center;
             background-size: cover;
             height: 100vh;
         }
