changed to white empty thrumbnail

--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,7 @@
   <style>
   header {
     display: flex;
-    padding: 2.4em;
-    padding-top: 1em;
-    padding-bottom: 10em;
+    padding-bottom: 10vh;
     font-family: "georgia";
     font-size: 1.5em;
     background:#fdfefc;
