--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sign up for Roots!</title>
+
+    <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBwMmrfVhBdrFkt40qaQoo0XwyJWYVu67U",
+        authDomain: "roots-landing-page.firebaseapp.com",
+        databaseURL: "https://roots-landing-page.firebaseio.com",
+        projectId: "roots-landing-page",
+        storageBucket: "roots-landing-page.appspot.com",
+        messagingSenderId: "40192157369"
+      };
+      firebase.initializeApp(config);
+    </script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
     <link rel="icon" href="./assets/favicon.ico">
